feat: add ZIA App Connector Tunnel 2.0 and multi-cloud ZPA support
  - Add ZIA Application Connector Tunnel 2.0 (SVPN) IP range retrieval
  - Support multiple ZPA cloud domains (private.zscaler.com, zpatwo.net, zpabeta.net)
  - Implement interactive service selection (ZIA only or ZIA+ZPA)
  - Auto-generate timestamped output filenames based on selected domains
  - Fix CloudEnforcementNodeRanges URLs to use consistent base URL format
  - Add /32 CIDR notation for single IPs without subnet masks
  - Update documentation with new architecture diagram and usage examples

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Generated output files
-zpa_bc_subnet_consolidate.txt
-subnet_consolidated.txt
+*consolidate*.txt
 
 # Downloaded JSON files
 *.json
